Soul catch of Dimensional Gate (Era of Magic)
Fixed non translatable or empty fears

--- a/utils/Randomizer.cfg
+++ b/utils/Randomizer.cfg
@@ -18,6 +18,32 @@
     [/store_unit_type]
 [/event]
 
+# souls catched by the Dimensional Gate
+[event]
+    name=last_breath,die
+    id=nfwme_soul_catcher
+    first_time_only=no
+    [filter]
+        [not]
+            race=mechanical,undead
+        [/not]
+    [/filter]
+    [filter_second]
+        ability=soul_catcher
+    [/filter_second]
+    [filter_condition]
+        {VARIABLE_CONDITIONAL nfwe_wounds not_equals 1}
+    [/filter_condition]
+    [if]
+        {VARIABLE_CONDITIONAL nfwe_already_catched not_equals $unit.id}
+        [then]
+            {NFW_soul_catched_WOUND}
+            {VARIABLE nfwe_already_catched $unit.id}
+        [/then]
+    [/if]
+    {VARIABLE nfw_already_wound yes}
+[/event]
+
 # filter plagueable plagued units
 [event]
     name=last_breath
@@ -97,7 +123,6 @@
     first_time_only=no
     [filter_condition]
         {VARIABLE_CONDITIONAL nfw_already_wound not_equals yes}
-        {NFW_wounds_ENABLED}
     [/filter_condition]
     [filter]
         race=mechanical
@@ -116,115 +141,86 @@
                     {NFW_destroyed_WOUND}
                     {VARIABLE nfw_already_wound yes}
                 [/then]
-                [else]
-                    {NFW_damaged_WOUND}
-                    {VARIABLE nfw_already_wound yes}
-                [/else]
+                [elseif]
+                    {NFW_wounds_ENABLED}
+                    [then]
+                        {NFW_damaged_WOUND}
+                        {VARIABLE nfw_already_wound yes}
+                    [/then]
+                [/elseif]
             [/if]
         [/case]
-        [case]
-            value=5,6,7
-            {NFW_damaged_WOUND}
-            {VARIABLE nfw_already_wound yes}
-        [/case]
-        [case]
-            value=8,9
-            {NFW_captured_WOUND}
-            {VARIABLE nfw_already_wound yes}
-        [/case]
-        [case]
-            value=10,11
-            {NFW_rotten_WOUND}
-            {VARIABLE nfw_already_wound yes}
-        [/case]
+    [/switch]
+    [if]
+        {NFW_wounds_ENABLED}
+        [then]
+            [switch]
+                variable=rand_wound
+                [case]
+                    value=5,6,7
+                    {NFW_damaged_WOUND}
+                    {VARIABLE nfw_already_wound yes}
+                [/case]
+                [case]
+                    value=8,9
+                    {NFW_captured_WOUND}
+                    {VARIABLE nfw_already_wound yes}
+                [/case]
+                [case]
+                    value=10,11
+                    {NFW_rotten_WOUND}
+                    {VARIABLE nfw_already_wound yes}
+                [/case]
 
-        [case]
-            value=12,13,14,15
-            [if]
-                {VARIABLE_CONDITIONAL nfw_weapon_type equals fire}
-                [then]
-                    {NFW_burned_WOUND}
-                    {VARIABLE nfw_already_wound yes}
-                [/then]
-                [elseif]
-                    {VARIABLE_CONDITIONAL nfw_weapon_type equals ice}
-                    [then]
-                        {NFW_frostbite_WOUND}
-                        {VARIABLE nfw_already_wound yes}
-                    [/then]
-                [/elseif]
-                [elseif]
-                    [have_location]
-                        {EVENT_UNIT}
-                        terrain=*^Ecf,*^Eb,Ql*,Mv*,Yl*
-                    [/have_location]
-                    [then]
-                        {NFW_burned_WOUND}
-                        {VARIABLE nfw_already_wound yes}
-                    [/then]
-                [/elseif]
-                [elseif]
-                    [have_location]
-                        {EVENT_UNIT}
-                        terrain=A*,Ms*,Ha*,Cea^*,Coa^*,Cha^*,Cva^*,Cfa^*,Kea^*,Koa^*,Kha^*,Kva^*,Kfa^*,Rra^*,*^Esa,*^Fpa,*^Feta,*^Fda,*^Fma,*^Voa,*^Vea,*^Vha,*^Vhca,*^Vhha,*^Vca,*^Vla,*^Vaa
-                    [/have_location]
-                    [then]
-                        {NFW_frostbite_WOUND}
-                        {VARIABLE nfw_already_wound yes}
-                    [/then]
-                [/elseif]
-                [elseif]
-                    {VARIABLE_CONDITIONAL nfw_weapon_type equals impact}
-                    [or]
-                        {VARIABLE_CONDITIONAL nfw_weapon_type equals arcane}
-                    [/or]
-                    [then]
-                        {NFW_rotten_WOUND}
-                        {VARIABLE nfw_already_wound yes}
-                    [/then]
-                [/elseif]
-                [elseif]
-                    {VARIABLE_CONDITIONAL nfw_weapon_type equals blade}
-                    [then]
-                        {NFW_gash_WOUND}
-                        {VARIABLE nfw_already_wound yes}
-                    [/then]
-                [/elseif]
-                [else]
-                    {NFW_damaged_WOUND}
-                    {VARIABLE nfw_already_wound yes}
-                [/else]
-            [/if]
-        [/case]
-        [case]
-            value=16,17,18,19,20
-            [if]
-                [have_location]
-                    {EVENT_UNIT}
-                    [filter]
-                        formula="experience > (max_experience / 1.5)"
-                    [/filter]
-                [/have_location]
-                [then]
-                    {NFW_short_term_memory_loss_WOUND}
-                    {VARIABLE nfw_already_wound yes}
-                [/then]
-                [else]
+                [case]
+                    value=12,13,14,15
                     [if]
-                        [have_location]
-                            {EVENT_UNIT}
-                            [filter]
-                                ability=amnesia_dummy
-                            [/filter]
-                        [/have_location]
+                        {VARIABLE_CONDITIONAL nfw_weapon_type equals fire}
                         [then]
-                            {NFW_damaged_WOUND}
+                            {NFW_burned_WOUND}
                             {VARIABLE nfw_already_wound yes}
                         [/then]
                         [elseif]
-                            {VARIABLE_CONDITIONAL rand_wound greater_than 18}
+                            {VARIABLE_CONDITIONAL nfw_weapon_type equals ice}
                             [then]
-                                {NFW_amnesia_WOUND}
+                                {NFW_frostbite_WOUND}
+                                {VARIABLE nfw_already_wound yes}
+                            [/then]
+                        [/elseif]
+                        [elseif]
+                            [have_location]
+                                {EVENT_UNIT}
+                                terrain=*^Ecf,*^Eb,Ql*,Mv*,Yl*
+                            [/have_location]
+                            [then]
+                                {NFW_burned_WOUND}
+                                {VARIABLE nfw_already_wound yes}
+                            [/then]
+                        [/elseif]
+                        [elseif]
+                            [have_location]
+                                {EVENT_UNIT}
+                                terrain=A*,Ms*,Ha*,Cea^*,Coa^*,Cha^*,Cva^*,Cfa^*,Kea^*,Koa^*,Kha^*,Kva^*,Kfa^*,Rra^*,*^Esa,*^Fpa,*^Feta,*^Fda,*^Fma,*^Voa,*^Vea,*^Vha,*^Vhca,*^Vhha,*^Vca,*^Vla,*^Vaa
+                            [/have_location]
+                            [then]
+                                {NFW_frostbite_WOUND}
+                                {VARIABLE nfw_already_wound yes}
+                            [/then]
+                        [/elseif]
+                        [elseif]
+                            {VARIABLE_CONDITIONAL nfw_weapon_type equals impact}
+                            [or]
+                                {VARIABLE_CONDITIONAL nfw_weapon_type equals arcane}
+                            [/or]
+                            [then]
+                                {NFW_rotten_WOUND}
+                                {VARIABLE nfw_already_wound yes}
+                            [/then]
+                        [/elseif]
+                        [elseif]
+                            {VARIABLE_CONDITIONAL nfw_weapon_type equals blade}
+                            [then]
+                                {NFW_gash_WOUND}
                                 {VARIABLE nfw_already_wound yes}
                             [/then]
                         [/elseif]
@@ -233,10 +229,50 @@
                             {VARIABLE nfw_already_wound yes}
                         [/else]
                     [/if]
-                [/else]
-            [/if]
-        [/case]
-    [/switch]
+                [/case]
+                [case]
+                    value=16,17,18,19,20
+                    [if]
+                        [have_location]
+                            {EVENT_UNIT}
+                            [filter]
+                                formula="experience > (max_experience / 1.5)"
+                            [/filter]
+                        [/have_location]
+                        [then]
+                            {NFW_short_term_memory_loss_WOUND}
+                            {VARIABLE nfw_already_wound yes}
+                        [/then]
+                        [else]
+                            [if]
+                                [have_location]
+                                    {EVENT_UNIT}
+                                    [filter]
+                                        ability=amnesia_dummy
+                                    [/filter]
+                                [/have_location]
+                                [then]
+                                    {NFW_damaged_WOUND}
+                                    {VARIABLE nfw_already_wound yes}
+                                [/then]
+                                [elseif]
+                                    {VARIABLE_CONDITIONAL rand_wound greater_than 18}
+                                    [then]
+                                        {NFW_amnesia_WOUND}
+                                        {VARIABLE nfw_already_wound yes}
+                                    [/then]
+                                [/elseif]
+                                [else]
+                                    {NFW_damaged_WOUND}
+                                    {VARIABLE nfw_already_wound yes}
+                                [/else]
+                            [/if]
+                        [/else]
+                    [/if]
+                [/case]
+            [/switch]
+        [/then]
+    [/if]
 [/event]
 
 # filter with death not mechanical
@@ -292,7 +328,7 @@
             [if]
                 {NFW_undead_ENABLED}
                 {VARIABLE_CONDITIONAL nfwe_unit_type.movement_type not_equals undeadspirit}
-				{VARIABLE_CONDITIONAL nfwe_unit_type.race not_equals eoma_magical}
+                {VARIABLE_CONDITIONAL nfwe_unit_type.race not_equals eoma_magical}
                 [and]
                     [not]
                         [have_location]
@@ -311,7 +347,7 @@
                     {NFW_undead_ENABLED}
                     [and]
                         {VARIABLE_CONDITIONAL nfwe_unit_type.movement_type not_equals undeadspirit}
-						{VARIABLE_CONDITIONAL nfwe_unit_type.race not_equals eoma_magical}
+                        {VARIABLE_CONDITIONAL nfwe_unit_type.race not_equals eoma_magical}
                     [/and]
                     [and]
                         [not]
@@ -345,14 +381,14 @@
         [case]
             value=8,9,10,11,12,13,14
             [if]
-				[have_location]
-					{EVENT_UNIT}
-					[filter]
-						[has_attack]
-							range=kamikaze
-						[/has_attack]
-					[/filter]
-				[/have_location]
+                [have_location]
+                    {EVENT_UNIT}
+                    [filter]
+                        [has_attack]
+                            range=kamikaze
+                        [/has_attack]
+                    [/filter]
+                [/have_location]
                 [then]
                     {NFW_dead_WOUND}
                     {VARIABLE nfw_already_wound yes}
@@ -788,7 +824,7 @@
         [/not]
     [/filter]
 #endif
-    {VARIABLE_OP rand_wound rand "1..6"}
+    {VARIABLE_OP rand_wound rand "1..50"}
     [switch]
         variable=rand_wound
         [case]
@@ -1241,7 +1277,7 @@
                     [if]
                         {VARIABLE_CONDITIONAL nfw_weapon_type equals impact}
                         {VARIABLE_CONDITIONAL nfwe_unit_type.movement_type not_equals undeadspirit}
-						{VARIABLE_CONDITIONAL nfwe_unit_type.race not_equals eoma_magical}
+                        {VARIABLE_CONDITIONAL nfwe_unit_type.race not_equals eoma_magical}
                         [then]
                             {NFW_broken_rib_WOUND}
                             {VARIABLE rand_wound_selected yes}
@@ -1252,7 +1288,7 @@
                     value=36
                     [if]
                         {VARIABLE_CONDITIONAL nfwe_unit_type.movement_type not_equals undeadspirit}
-						{VARIABLE_CONDITIONAL nfwe_unit_type.race not_equals eoma_magical}
+                        {VARIABLE_CONDITIONAL nfwe_unit_type.race not_equals eoma_magical}
                         [then]
                             {NFW_broken_rib_WOUND}
                             {VARIABLE rand_wound_selected yes}
@@ -1369,6 +1405,18 @@
                                 ability=nfw_scared_of_weapon
                             [/filter]
                         [/have_location]
+                        [or]
+                            [variable]
+                                name=nfw_scary_weapon
+                                equals=$nfw_empty_var
+                            [/variable]
+                        [/or]
+                        [or]
+                            [variable]
+                                name=nfw_scary_weapon_translated
+                                equals=$nfw_empty_var
+                            [/variable]
+                        [/or]
                         [else]
                             {NFW_fear_of_weapon_WOUND}
                             {VARIABLE rand_wound_selected yes}
@@ -1488,6 +1536,18 @@
                                 ability=nfw_scared_of_type
                             [/filter]
                         [/have_location]
+                        [or]
+                            [variable]
+                                name=nfwe_second_unit_type
+                                equals=$nfw_empty_var
+                            [/variable]
+                        [/or]
+                        [or]
+                            [variable]
+                                name=nfwe_second_unit_type.name
+                                equals=$nfw_empty_var
+                            [/variable]
+                        [/or]
                         [else]
                             {NFW_fear_of_type_WOUND}
                             {VARIABLE rand_wound_selected yes}
