--- a/utils/Wound_logic.cfg
+++ b/utils/Wound_logic.cfg
@@ -4,7 +4,7 @@
     id=nfwme_kill_dead_units
     first_time_only=no
     [kill]
-        trait=nfw_dead,nfw_plagued
+        trait=nfw_dead,nfw_plagued,nfw_consumed
     [/kill]
 [/event]
 
