--- a/utils/nfw_main.cfg
+++ b/utils/nfw_main.cfg
@@ -27,11 +27,11 @@
             {VARIABLE_CONDITIONAL nfw_already_wound not_equals yes}
         [/filter_condition]
 #ifdef CAMPAIGN_NORTHERN_REBIRTH
-		[filter]
-			[not]
-				id=Sister Thera,Father Morvin
-			[/not]
-		[/filter]
+        [filter]
+            [not]
+                id=Sister Thera,Father Morvin
+            [/not]
+        [/filter]
 #endif
         [if]
             [have_location]
@@ -126,26 +126,26 @@
                 message= _ "Argh, I’m dying!"
                 female_message= _ "female^Argh, I’m dying!"
             [/message]
-			[if]
-				[variable]
-					name=nfwe_unit_type.female.name
-					equals=$nfw_empty_var
-				[/variable]
-				[then]
-					[message]
-						speaker=$unit.id
-						message= _ "$unit.name a $nfwe_unit_type.name was destroyed."
-						female_message= _ "$unit.name a $nfwe_unit_type.name was destroyed."
-					[/message]
-				[/then]
-				[else]
-					[message]
-						speaker=$unit.id
-						message= _ "$unit.name a $nfwe_unit_type.name was destroyed."
-						female_message= _ "$unit.name a $nfwe_unit_type.female.name was destroyed."
-					[/message]
-				[/else]
-			[/if]
+            [if]
+                [variable]
+                    name=nfwe_unit_type.female.name
+                    equals=$nfw_empty_var
+                [/variable]
+                [then]
+                    [message]
+                        speaker=$unit.id
+                        message= _ "$unit.name a $nfwe_unit_type.name was destroyed."
+                        female_message= _ "$unit.name a $nfwe_unit_type.name was destroyed."
+                    [/message]
+                [/then]
+                [else]
+                    [message]
+                        speaker=$unit.id
+                        message= _ "$unit.name a $nfwe_unit_type.name was destroyed."
+                        female_message= _ "$unit.name a $nfwe_unit_type.female.name was destroyed."
+                    [/message]
+                [/else]
+            [/if]
         [/then]
         [elseif]
             [have_location]
@@ -166,26 +166,26 @@
                     message= _ "Argh, I’m dying!"
                     female_message= _ "female^Argh, I’m dying!"
                 [/message]
-				[if]
-					[variable]
-						name=nfwe_unit_type.female.name
-						equals=$nfw_empty_var
-					[/variable]
-					[then]
-						[message]
-							speaker=$unit.id
-							message= _ "$unit.name a $nfwe_unit_type.name was revived as undead."
-							female_message= _ "$unit.name a $nfwe_unit_type.name was revived as undead."
-						[/message]
-					[/then]
-					[else]
-						[message]
-							speaker=$unit.id
-							message= _ "$unit.name a $nfwe_unit_type.name was revived as undead."
-							female_message= _ "$unit.name a $nfwe_unit_type.female.name was revived as undead."
-						[/message]
-					[/else]
-				[/if]
+                [if]
+                    [variable]
+                        name=nfwe_unit_type.female.name
+                        equals=$nfw_empty_var
+                    [/variable]
+                    [then]
+                        [message]
+                            speaker=$unit.id
+                            message= _ "$unit.name a $nfwe_unit_type.name was revived as undead."
+                            female_message= _ "$unit.name a $nfwe_unit_type.name was revived as undead."
+                        [/message]
+                    [/then]
+                    [else]
+                        [message]
+                            speaker=$unit.id
+                            message= _ "$unit.name a $nfwe_unit_type.name was revived as undead."
+                            female_message= _ "$unit.name a $nfwe_unit_type.female.name was revived as undead."
+                        [/message]
+                    [/else]
+                [/if]
             [/then]
         [/elseif]
         [elseif]
@@ -201,26 +201,26 @@
                     message= _ "Argh, I’m dying!"
                     female_message= _ "female^Argh, I’m dying!"
                 [/message]
-				[if]
-					[variable]
-						name=nfwe_unit_type.female.name
-						equals=$nfw_empty_var
-					[/variable]
-					[then]
-						[message]
-							speaker=$unit.id
-							message= _ "$unit.name a $nfwe_unit_type.name returned as a ghost."
-							female_message= _ "$unit.name a $nfwe_unit_type.name returned as a ghost."
-						[/message]
-					[/then]
-					[else]
-						[message]
-							speaker=$unit.id
-							message= _ "$unit.name a $nfwe_unit_type.name returned as a ghost."
-							female_message= _ "$unit.name a $nfwe_unit_type.female.name returned as a ghost."
-						[/message]
-					[/else]
-				[/if]
+                [if]
+                    [variable]
+                        name=nfwe_unit_type.female.name
+                        equals=$nfw_empty_var
+                    [/variable]
+                    [then]
+                        [message]
+                            speaker=$unit.id
+                            message= _ "$unit.name a $nfwe_unit_type.name returned as a ghost."
+                            female_message= _ "$unit.name a $nfwe_unit_type.name returned as a ghost."
+                        [/message]
+                    [/then]
+                    [else]
+                        [message]
+                            speaker=$unit.id
+                            message= _ "$unit.name a $nfwe_unit_type.name returned as a ghost."
+                            female_message= _ "$unit.name a $nfwe_unit_type.female.name returned as a ghost."
+                        [/message]
+                    [/else]
+                [/if]
             [/then]
         [/elseif]
         [elseif]
@@ -235,26 +235,60 @@
                     speaker=$unit.id
                     message= _ "Argh!"
                 [/message]
-				[if]
-					[variable]
-						name=nfwe_unit_type.female.name
-						equals=$nfw_empty_var
-					[/variable]
-					[then]
-						[message]
-							speaker=$unit.id
-							message= _ "$unit.name a $nfwe_unit_type.name was converted by the enemy."
-							female_message= _ "$unit.name a $nfwe_unit_type.name was converted by the enemy."
-						[/message]
-					[/then]
-					[else]
-						[message]
-							speaker=$unit.id
-							message= _ "$unit.name a $nfwe_unit_type.name was converted by the enemy."
-							female_message= _ "$unit.name a $nfwe_unit_type.female.name was converted by the enemy."
-						[/message]
-					[/else]
-				[/if]
+                [if]
+                    [variable]
+                        name=nfwe_unit_type.female.name
+                        equals=$nfw_empty_var
+                    [/variable]
+                    [then]
+                        [message]
+                            speaker=$unit.id
+                            message= _ "$unit.name a $nfwe_unit_type.name was converted by the enemy."
+                            female_message= _ "$unit.name a $nfwe_unit_type.name was converted by the enemy."
+                        [/message]
+                    [/then]
+                    [else]
+                        [message]
+                            speaker=$unit.id
+                            message= _ "$unit.name a $nfwe_unit_type.name was converted by the enemy."
+                            female_message= _ "$unit.name a $nfwe_unit_type.female.name was converted by the enemy."
+                        [/message]
+                    [/else]
+                [/if]
+            [/then]
+        [/elseif]
+        [elseif]
+            [have_location]
+                {EVENT_UNIT}
+                [filter]
+                    trait=nfw_consumed
+                [/filter]
+            [/have_location]
+            [then]
+                [message]
+                    speaker=$unit.id
+                    message= _ "Argh!"
+                [/message]
+                [if]
+                    [variable]
+                        name=nfwe_unit_type.female.name
+                        equals=$nfw_empty_var
+                    [/variable]
+                    [then]
+                        [message]
+                            speaker=$unit.id
+                            message= _ "$unit.name a $nfwe_unit_type.name was consumed by the enemy."
+                            female_message= _ "$unit.name a $nfwe_unit_type.name was consumed by the enemy."
+                        [/message]
+                    [/then]
+                    [else]
+                        [message]
+                            speaker=$unit.id
+                            message= _ "$unit.name a $nfwe_unit_type.name was consumed by the enemy."
+                            female_message= _ "$unit.name a $nfwe_unit_type.female.name was consumed by the enemy."
+                        [/message]
+                    [/else]
+                [/if]
             [/then]
         [/elseif]
         [elseif]
@@ -285,26 +319,26 @@
                         [/message]
                     [/then]
                 [/if]
-				[if]
-					[variable]
-						name=nfwe_unit_type.female.name
-						equals=$nfw_empty_var
-					[/variable]
-					[then]
-						[message]
-							speaker=$unit.id
-							message= _ "$unit.name, a $nfwe_unit_type.name, was captured by the enemy. You will have to pay a ransom."
-							female_message= _ "$unit.name, a $nfwe_unit_type.name, was captured by the enemy. You will have to pay a ransom."
-						[/message]
-					[/then]
-					[else]
-						[message]
-							speaker=$unit.id
-							message= _ "$unit.name, a $nfwe_unit_type.name, was captured by the enemy. You will have to pay a ransom."
-							female_message= _ "$unit.name, a $nfwe_unit_type.female.name, was captured by the enemy. You will have to pay a ransom."
-						[/message]
-					[/else]
-				[/if]
+                [if]
+                    [variable]
+                        name=nfwe_unit_type.female.name
+                        equals=$nfw_empty_var
+                    [/variable]
+                    [then]
+                        [message]
+                            speaker=$unit.id
+                            message= _ "$unit.name, a $nfwe_unit_type.name, was captured by the enemy. You will have to pay a ransom."
+                            female_message= _ "$unit.name, a $nfwe_unit_type.name, was captured by the enemy. You will have to pay a ransom."
+                        [/message]
+                    [/then]
+                    [else]
+                        [message]
+                            speaker=$unit.id
+                            message= _ "$unit.name, a $nfwe_unit_type.name, was captured by the enemy. You will have to pay a ransom."
+                            female_message= _ "$unit.name, a $nfwe_unit_type.female.name, was captured by the enemy. You will have to pay a ransom."
+                        [/message]
+                    [/else]
+                [/if]
             [/then]
         [/elseif]
         [elseif]
@@ -330,26 +364,26 @@
                         [/filter]
                     [/have_location]
                     [then]
-						[if]
-							[variable]
-								name=nfwe_unit_type.female.name
-								equals=$nfw_empty_var
-							[/variable]
-							[then]
-								[message]
-									speaker=$unit.id
-									message= _ "$unit.name a $nfwe_unit_type.name was destroyed."
-									female_message= _ "$unit.name a $nfwe_unit_type.name was destroyed."
-								[/message]
-							[/then]
-							[else]
-								[message]
-									speaker=$unit.id
-									message= _ "$unit.name a $nfwe_unit_type.name was destroyed."
-									female_message= _ "$unit.name a $nfwe_unit_type.female.name was destroyed."
-								[/message]
-							[/else]
-						[/if]
+                        [if]
+                            [variable]
+                                name=nfwe_unit_type.female.name
+                                equals=$nfw_empty_var
+                            [/variable]
+                            [then]
+                                [message]
+                                    speaker=$unit.id
+                                    message= _ "$unit.name a $nfwe_unit_type.name was destroyed."
+                                    female_message= _ "$unit.name a $nfwe_unit_type.name was destroyed."
+                                [/message]
+                            [/then]
+                            [else]
+                                [message]
+                                    speaker=$unit.id
+                                    message= _ "$unit.name a $nfwe_unit_type.name was destroyed."
+                                    female_message= _ "$unit.name a $nfwe_unit_type.female.name was destroyed."
+                                [/message]
+                            [/else]
+                        [/if]
                     [/then]
                 [/if]
             [/then]
@@ -396,7 +430,7 @@
                 [have_location]
                     {EVENT_UNIT}
                     [filter]
-                        trait=nfw_dead,nfw_plagued
+                        trait=nfw_dead,nfw_plagued,nfw_consumed
                     [/filter]
                 [/have_location]
             [/not]
