--- a/utils/Wounds.cfg
+++ b/utils/Wounds.cfg
@@ -28,6 +28,19 @@
     {NFW_FLOAT_TEXT_CONDITIONAL $x1 $y1 _"Lost" {NFW_COLOR_RED}}
 #enddef
 
+#define NFW_soul_catched_WOUND
+    [modify_unit]
+        {FILTER_EVENT_UNIT}
+        [trait]
+            id=nfw_consumed
+            male_name="<span color='#DA0000'>"+_"consumed"+"</span>"
+            female_name="<span color='#DA0000'>"+_"female^consumed"+"</span>"
+        [/trait]
+    [/modify_unit]
+
+    {NFW_FLOAT_TEXT_CONDITIONAL $x1 $y1 _"Consumed" {NFW_COLOR_RED}}
+#enddef
+
 #define NFW_destroyed_WOUND
     [modify_unit]
         {FILTER_EVENT_UNIT}
@@ -97,7 +110,7 @@
                     id=NFW_broken_arm_Healing
                     description=_ "Recover from broken arm"
                     max_times=-1
-					icon="misc/staminapotion.png"
+                    icon="misc/staminapotion.png"
                     [effect]
                         apply_to=new_ability
                         [abilities]
@@ -139,7 +152,7 @@
                     id=NFW_broken_wing_Healing
                     description=_ "Recover from broken wing"
                     max_times=-1
-					icon="misc/staminapotion.png"
+                    icon="misc/staminapotion.png"
                     [effect]
                         apply_to=new_ability
                         [abilities]
@@ -181,7 +194,7 @@
                     id=NFW_broken_leg_Healing
                     description=_ "Recover from broken leg"
                     max_times=-1
-					icon="misc/staminapotion.png"
+                    icon="misc/staminapotion.png"
                     [effect]
                         apply_to=new_ability
                         [abilities]
@@ -226,7 +239,7 @@
                     id=NFW_broken_rib_Healing
                     description= _"Recover from broken rib"
                     max_times=-1
-					icon="misc/staminapotion.png"
+                    icon="misc/staminapotion.png"
                     [effect]
                         apply_to=new_ability
                         [abilities]
@@ -272,7 +285,7 @@
                     id=NFW_burned_Healing
                     description= _"Recover from burn"
                     max_times=-1
-					icon="misc/staminapotion.png"
+                    icon="misc/staminapotion.png"
                     [effect]
                         apply_to=new_ability
                         [abilities]
@@ -348,7 +361,7 @@
                     id=NFW_concussion_Healing
                     description= _"Recover from concussion"
                     max_times=-1
-					icon="misc/staminapotion.png"
+                    icon="misc/staminapotion.png"
                     [effect]
                         apply_to=new_ability
                         [abilities]
@@ -789,7 +802,7 @@ Face your fears to try to overcome them."
                     id=NFW_frostbite_Healing
                     description= _"Recover from frostbite"
                     max_times=-1
-					icon="misc/staminapotion.png"
+                    icon="misc/staminapotion.png"
                     [effect]
                         apply_to=new_ability
                         [abilities]
@@ -834,7 +847,7 @@ Face your fears to try to overcome them."
                     id=NFW_gash_Healing
                     description= _"Recover from gash"
                     max_times=-1
-					icon="misc/staminapotion.png"
+                    icon="misc/staminapotion.png"
                     [effect]
                         apply_to=new_ability
                         [abilities]
@@ -873,7 +886,7 @@ Face your fears to try to overcome them."
                     id=NFW_infectiont_Healing
                     description= _"Recover from infection"
                     max_times=-1
-					icon="misc/staminapotion.png"
+                    icon="misc/staminapotion.png"
                     [effect]
                         apply_to=new_ability
                         [abilities]
@@ -926,7 +939,7 @@ Face your fears to try to overcome them."
                     id=NFW_insane_Healing
                     description= _"Recover from insanity"
                     max_times=-1
-					icon="misc/staminapotion.png"
+                    icon="misc/staminapotion.png"
                     [effect]
                         apply_to=new_ability
                         [abilities]
@@ -969,7 +982,7 @@ Face your fears to try to overcome them."
                     id=NFW_maimed_Healing
                     description= _"Recover from mutilation"
                     max_times=-1
-					icon="misc/staminapotion.png"
+                    icon="misc/staminapotion.png"
                     [effect]
                         apply_to=new_ability
                         [abilities]
@@ -1024,7 +1037,7 @@ Face your fears to try to overcome them."
                     id=NFW_necrosis_Healing
                     description= _"Recover from necrosis"
                     max_times=-1
-					icon="misc/staminapotion.png"
+                    icon="misc/staminapotion.png"
                     [effect]
                         apply_to=new_ability
                         [abilities]
@@ -1071,7 +1084,7 @@ Face your fears to try to overcome them."
                     id=NFW_necrosis_Healing
                     description= _"Recover from rot"
                     max_times=-1
-					icon="misc/workbench.png"
+                    icon="misc/workbench.png"
                     [effect]
                         apply_to=new_ability
                         [abilities]
@@ -1109,7 +1122,7 @@ Face your fears to try to overcome them."
                     id=NFW_amnesia_Healing
                     description= _"Recover from amnesia"
                     max_times=-1
-					icon="misc/staminapotion.png"
+                    icon="misc/staminapotion.png"
                     [effect]
                         apply_to=new_ability
                         [abilities]
@@ -1148,7 +1161,7 @@ Face your fears to try to overcome them."
                     id=NFW_sick_Healing
                     description= _"Recover from sickness"
                     max_times=-1
-					icon="misc/staminapotion.png"
+                    icon="misc/staminapotion.png"
                     [effect]
                         apply_to=new_ability
                         [abilities]
@@ -1201,7 +1214,7 @@ Face your fears to try to overcome them."
                     id=NFW_wild_magic_Healing
                     description= _"Recover from wild magic"
                     max_times=-1
-					icon="misc/staminapotion.png"
+                    icon="misc/staminapotion.png"
                     [effect]
                         apply_to=new_ability
                         [abilities]
@@ -1256,7 +1269,7 @@ Face your fears to try to overcome them."
                     id=NFW_damaged_Healing
                     description= _"Repair"
                     max_times=-1
-					icon="misc/workbench.png"
+                    icon="misc/workbench.png"
                     [effect]
                         apply_to=new_ability
                         [abilities]
