--- a/utils/nfw_main.cfg
+++ b/utils/nfw_main.cfg
@@ -134,15 +134,15 @@
                 [then]
                     [message]
                         speaker=$unit.id
-                        message= _ "$unit.name a $nfwe_unit_type.name was destroyed."
-                        female_message= _ "$unit.name a $nfwe_unit_type.name was destroyed."
+                        message= _ "$unit.name a $nfwe_unit_type.name died."
+                        female_message= _ "$unit.name a $nfwe_unit_type.name died."
                     [/message]
                 [/then]
                 [else]
                     [message]
                         speaker=$unit.id
-                        message= _ "$unit.name a $nfwe_unit_type.name was destroyed."
-                        female_message= _ "$unit.name a $nfwe_unit_type.female.name was destroyed."
+                        message= _ "$unit.name a $nfwe_unit_type.name died."
+                        female_message= _ "$unit.name a $nfwe_unit_type.female.name died."
                     [/message]
                 [/else]
             [/if]
