Better filter and explanation for EoM units

--- a/utils/Wounds.cfg
+++ b/utils/Wounds.cfg
@@ -38,7 +38,7 @@
         [/trait]
     [/modify_unit]
 
-    {NFW_FLOAT_TEXT_CONDITIONAL $x1 $y1 _"Consumed" {NFW_COLOR_RED}}
+    {NFW_FLOAT_TEXT_CONDITIONAL $x1 $y1 _"Consume" {NFW_COLOR_RED}}
 #enddef
 
 #define NFW_destroyed_WOUND
