--- a/utils/Randomizer.cfg
+++ b/utils/Randomizer.cfg
@@ -309,6 +309,9 @@
                             {EVENT_UNIT}
                             [filter]
                                 race=undead,eoma_magical
+								[or]
+									trait=elemental,undead
+								[/or]
                             [/filter]
                         [/have_location]
                     [/not]
@@ -345,16 +348,14 @@
                 [/then]
                 [elseif]
                     {NFW_undead_ENABLED}
-                    [and]
-                        {VARIABLE_CONDITIONAL nfwe_unit_type.movement_type not_equals undeadspirit}
-                        {VARIABLE_CONDITIONAL nfwe_unit_type.race not_equals eoma_magical}
-                    [/and]
+                    {VARIABLE_CONDITIONAL nfwe_unit_type.movement_type not_equals undeadspirit}
+                    {VARIABLE_CONDITIONAL nfwe_unit_type.race not_equals eoma_magical}
                     [and]
                         [not]
                             [have_location]
                                 {EVENT_UNIT}
                                 [filter]
-                                    trait=ghost_trait
+                                    trait=ghost_trait,elemental
                                 [/filter]
                             [/have_location]
                         [/not]
@@ -415,10 +416,10 @@
         [/not]
 #endif
         [not]
-            race=mechanical,undead,eoma_magical
+            race=undead,eoma_magical
         [/not]
         [not]
-            trait=ghost_trait,undead,elemental,mechanical
+            trait=ghost_trait,undead,elemental
         [/not]
     [/filter]
     {VARIABLE_OP rand_wound rand "1..40"}
