--- a/utils/help_menu.cfg
+++ b/utils/help_menu.cfg
@@ -152,7 +152,8 @@
 * <b><i>Necrosis</i></b> (-40% arcane resistance) > Not mechanical, random, cumulative, 1%
 * <b><i>Rot</i></b> (-20% arcane and impact resistance) > Mechanical, random, cumulative, 10% - 30% with impact or arcane attack
 * <b><i>Damage</i></b> (-10% mp, hp, damage and accuracy) > Mechanical, random, cumulative, 50%
-* <b><i>Lost</i></b> (equivalent to death) > Units non unplagueables, killed with plague attack, 100%"
+* <b><i>Lost</i></b> (equivalent to death) > Units non unplagueables, killed with plague attack, 100%
+* <b><i>Consume</i></b> (equivalent to death) > Not mechanical or undead, killed with soul catcher attack, 100%"
                     side_for=$side_number
                     image="misc/nfw-icon.png"
                     {NFW_MENU_EXIT}
@@ -220,10 +221,10 @@
  "+_"(0 = Deactivated, 1 = Death, 2 = Death + Undeath)"+"
 
 "+_"<b>Wounds list:</b>
-* <b><i>Death</i></b>: Definitive death, 33% chance - 20% with Undeath active
+* <b><i>Death</i></b>: Definitive death, 33% chance - 20% with Undeath active - 66% kamikaze units
 * <b><i>Destruction</i></b>: Definitive death for mechanic units, 20% chance
-* <b><i>Turning into a ghost</i></b>: -60% HP; -30% general attack damage; spirit type movement, defenses and resistances; chaotic alignment; ranged attack changed to cold if not magical, arcane or fire; melee attack changed to arcane, with drain, and with -25% damage if not magical, cold, fire or arcane > Units that are not already spirits or ghosts; 5% chance
-* <b><i>Turning into a zombie</i></b>: -40% HP, -30% general attack damage, -30% movement, -50% magical attacks strikes, low arcane resistance, chaotic alignment and fearless, plague on melee, and poor markmanship on marksmans > Units that are not already undead, 10% chance"
+* <b><i>Turning into a ghost</i></b>: -60% HP; -30% general attack damage; spirit type movement, defenses and resistances; chaotic alignment; ranged attack changed to cold if not magical, arcane or fire; melee attack changed to arcane, with drain, and with -25% damage if not magical, cold, fire or arcane > Units that are not already spirits, ghosts, magical or elemental; 5% chance
+* <b><i>Turning into a zombie</i></b>: -40% HP, -30% general attack damage, -30% movement, -50% magical attacks strikes, low arcane resistance, chaotic alignment and fearless, plague on melee, and poor markmanship on marksmans > Units that are not already undead, elemental or magical, 10% chance"
         side_for=$side_number
         image="misc/nfw-icon.png"
         [option]
@@ -318,7 +319,7 @@
 * <b><i><span color='#963296'>Arcane elemental</span></i></b> +30% arcane resistance +All attacks changed to arcane -30% damage -40% HP > Units with arcane attacks, or wounded with arcane, or on a terrain with ethereal abyss = 8 HP when either the attacker or defender are in a terrain with ethereal abyss, once per attack
 * <b><i><span color='#7D3C00'>Earth elemental</span></i></b> +30% impact resistance +All attacks changed to impact -25% damage -30% HP -20% MP > Units with impact attacks, or wounded with impact, or on a cave terrain = 2 HP when either the attacker or defender are in a cave terrain, once per attack
 * <b><i><span color='#00FFFF'>Air elemental</span></i></b> +40% blade +20% pierce +20% impact resistance +All attacks changed to blade +30% MP -40% damage -60% HP > Units with blade attacks, or birds, falcons, gryphon, bats, or wounded with blade, or on a terrain with windmill = 4 HP when either the attacker or defender are in a terrain with windmill, once per attack
-* <b><i>All elementals</i></b> > Mechanical, undead, ghosts, spirits and elemental units can't receive any elemental wound, and no unit can received it twice, all have the elemental trait (inmune to poison, drain and plague), ~&lt;15% chance if conditions are met"
+* <b><i>All elementals</i></b> > Mechanical, undead, ghosts, spirits, magical and elemental units can't receive any elemental wound, and no unit can received it twice, all have the elemental trait (inmune to poison, drain and plague), ~&lt;15% chance if conditions are met"
                     image="misc/nfw-icon.png"
                     {NFW_MENU_EXIT}
                 [/message]
