TLU Siege of Mag Magar event

--- a/utils/campaigns.cfg
+++ b/utils/campaigns.cfg
@@ -313,6 +313,20 @@
             [/message]
         [/case]
 #endif
+#ifdef CAMPAIGN_TO_LANDS_UNKNOWN
+        [case]
+            value=12_Siege_of_Mag-Magar
+			[event]
+				name=turn 5
+				id=nfw_ally_malib_advice
+				[message]
+					speaker=narrator
+					message= _ "<b><i>Non-Fatal Wounds:</i></b> All Malib units that join your side will receive a death wound in battle, as they will not be recoverable."
+					image="misc/nfw-icon.png"
+				[/message]
+			[/event]
+        [/case]
+#endif
     [/switch]
 [/event]
 
@@ -676,6 +690,16 @@
     [/filter]
     {NFW_dead_WOUND}
     {VARIABLE nfw_already_wound yes}
+[/event]
+[event]
+	name=last_breath
+	id=nfw_ally_malib_death
+	first_time_only=no
+	[filter]
+		ability=temp_ally
+	[/filter]
+	{NFW_dead_WOUND}
+	{VARIABLE nfw_already_wound yes}
 [/event]
 #endif
 
