--- a/utils/nfw_main.cfg
+++ b/utils/nfw_main.cfg
@@ -135,14 +135,14 @@
                     [message]
                         speaker=$unit.id
                         message= _ "$unit.name a $nfwe_unit_type.name died."
-                        female_message= _ "$unit.name a $nfwe_unit_type.name died."
+                        female_message= _ "female^$unit.name a $nfwe_unit_type.name died."
                     [/message]
                 [/then]
                 [else]
                     [message]
                         speaker=$unit.id
                         message= _ "$unit.name a $nfwe_unit_type.name died."
-                        female_message= _ "$unit.name a $nfwe_unit_type.female.name died."
+                        female_message= _ "female^$unit.name a $nfwe_unit_type.female.name died."
                     [/message]
                 [/else]
             [/if]
@@ -175,14 +175,14 @@
                         [message]
                             speaker=$unit.id
                             message= _ "$unit.name a $nfwe_unit_type.name was revived as undead."
-                            female_message= _ "$unit.name a $nfwe_unit_type.name was revived as undead."
+                            female_message= _ "female^$unit.name a $nfwe_unit_type.name was revived as undead."
                         [/message]
                     [/then]
                     [else]
                         [message]
                             speaker=$unit.id
                             message= _ "$unit.name a $nfwe_unit_type.name was revived as undead."
-                            female_message= _ "$unit.name a $nfwe_unit_type.female.name was revived as undead."
+                            female_message= _ "female^$unit.name a $nfwe_unit_type.female.name was revived as undead."
                         [/message]
                     [/else]
                 [/if]
@@ -210,14 +210,14 @@
                         [message]
                             speaker=$unit.id
                             message= _ "$unit.name a $nfwe_unit_type.name returned as a ghost."
-                            female_message= _ "$unit.name a $nfwe_unit_type.name returned as a ghost."
+                            female_message= _ "female^$unit.name a $nfwe_unit_type.name returned as a ghost."
                         [/message]
                     [/then]
                     [else]
                         [message]
                             speaker=$unit.id
                             message= _ "$unit.name a $nfwe_unit_type.name returned as a ghost."
-                            female_message= _ "$unit.name a $nfwe_unit_type.female.name returned as a ghost."
+                            female_message= _ "female^$unit.name a $nfwe_unit_type.female.name returned as a ghost."
                         [/message]
                     [/else]
                 [/if]
@@ -244,14 +244,14 @@
                         [message]
                             speaker=$unit.id
                             message= _ "$unit.name a $nfwe_unit_type.name was converted by the enemy."
-                            female_message= _ "$unit.name a $nfwe_unit_type.name was converted by the enemy."
+                            female_message= _ "female^$unit.name a $nfwe_unit_type.name was converted by the enemy."
                         [/message]
                     [/then]
                     [else]
                         [message]
                             speaker=$unit.id
                             message= _ "$unit.name a $nfwe_unit_type.name was converted by the enemy."
-                            female_message= _ "$unit.name a $nfwe_unit_type.female.name was converted by the enemy."
+                            female_message= _ "female^$unit.name a $nfwe_unit_type.female.name was converted by the enemy."
                         [/message]
                     [/else]
                 [/if]
@@ -278,14 +278,14 @@
                         [message]
                             speaker=$unit.id
                             message= _ "$unit.name a $nfwe_unit_type.name was consumed by the enemy."
-                            female_message= _ "$unit.name a $nfwe_unit_type.name was consumed by the enemy."
+                            female_message= _ "female^$unit.name a $nfwe_unit_type.name was consumed by the enemy."
                         [/message]
                     [/then]
                     [else]
                         [message]
                             speaker=$unit.id
                             message= _ "$unit.name a $nfwe_unit_type.name was consumed by the enemy."
-                            female_message= _ "$unit.name a $nfwe_unit_type.female.name was consumed by the enemy."
+                            female_message= _ "female^$unit.name a $nfwe_unit_type.female.name was consumed by the enemy."
                         [/message]
                     [/else]
                 [/if]
@@ -328,14 +328,14 @@
                         [message]
                             speaker=$unit.id
                             message= _ "$unit.name, a $nfwe_unit_type.name, was captured by the enemy. You will have to pay a ransom."
-                            female_message= _ "$unit.name, a $nfwe_unit_type.name, was captured by the enemy. You will have to pay a ransom."
+                            female_message= _ "female^$unit.name, a $nfwe_unit_type.name, was captured by the enemy. You will have to pay a ransom."
                         [/message]
                     [/then]
                     [else]
                         [message]
                             speaker=$unit.id
                             message= _ "$unit.name, a $nfwe_unit_type.name, was captured by the enemy. You will have to pay a ransom."
-                            female_message= _ "$unit.name, a $nfwe_unit_type.female.name, was captured by the enemy. You will have to pay a ransom."
+                            female_message= _ "female^$unit.name, a $nfwe_unit_type.female.name, was captured by the enemy. You will have to pay a ransom."
                         [/message]
                     [/else]
                 [/if]
@@ -373,14 +373,14 @@
                                 [message]
                                     speaker=$unit.id
                                     message= _ "$unit.name a $nfwe_unit_type.name was destroyed."
-                                    female_message= _ "$unit.name a $nfwe_unit_type.name was destroyed."
+                                    female_message= _ "female^$unit.name a $nfwe_unit_type.name was destroyed."
                                 [/message]
                             [/then]
                             [else]
                                 [message]
                                     speaker=$unit.id
                                     message= _ "$unit.name a $nfwe_unit_type.name was destroyed."
-                                    female_message= _ "$unit.name a $nfwe_unit_type.female.name was destroyed."
+                                    female_message= _ "female^$unit.name a $nfwe_unit_type.female.name was destroyed."
                                 [/message]
                             [/else]
                         [/if]
